...
            tools:ignore="InconsistentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:transcriptMode="normal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"/>

</LinearLayout>
