...
    <string name="cert_from_keystore">Got certificate \'%s\' from keystore</string>
    <string name="provider_label">Provider:</string>
    <string name="provider_label_none">No provider configured</string>
    <string name="status_unknown">Status unknown.</string>
    <string name="eip_service_label">Encrypted VPN Internet Access</string>
    <string name="configuration_wizard_title">Select a service provider</string>
    <string name="add_provider">Add new Provider</string>
    <string name="introduce_new_provider">Add a new service provider</string>
    <string name="save">Save</string>
    <string name="new_provider_uri">Domain name</string>
    <string name="valid_url_entered">The URL is valid</string>
    <string name="not_valid_url_entered">Malformed URL</string>
    <string name="provider_details_title">Provider details</string>
...
    <string name="setup_success_description">Click the button below to connect</string>
    <string name="permission_rejected">Permission request rejected.</string>
    <string name="login_not_supported">The current app version doesn\'t support logins, which you need to update your VPN certificate for this provider.</string>
    <string name="select_language">Select Language</string>
    <string name="system_default">System default</string>
    <string name="syntax_check">Syntax Check:</string>
    <string name="validation_status_success">Good</string>
    <string name="validation_status_failure">Bad</string>
    <string name="enter_invite_code">Enter invite Code</string>
    <string name="invalid_code">Invalid code</string>
    <string name="automatic_bridge">Automatic (recommended)</string>
    <string name="automatic_bridge_description">Connection will be attempted using the best available bridges and protocols.</string>
    <string name="manual_bridge">Manual Configuration</string>
    <string name="manual_bridge_description">Select private bridges and specific protocols</string>
    <string name="censorship_circumvention_description">Manual configuration requires technical understanding. Proceed with caution.</string>
...
