...
                    android:background="@color/colorPrimary"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            style="@style/BitmaskSetupButton"
            android:id="@+id/setup_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:text="@string/next"
...
